--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root{
     --cor-fundo: #022416 ;
     --cor-principal: #094d17 ;
@@ -8,12 +9,15 @@
 }
 
 body {
-    background-color: var(--cor-fundo);
-    color: var(--cor-texto);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    body {
+        background-color: var(--cor-fundo);
+        color: var(--cor-texto);
+        font-family: 'Inter', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
 }
 
 .caixa-principal{
@@ -40,4 +44,15 @@ button {
 button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
+    .caixa-resultado{
+        display: none;
+    }
+    .caixa-resultado.mostrar{
+        display: block;
+    }
+    .caixa-alternativas{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
